<resources>
    <string name="app_name">OpenGApps Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="action_reboot">Reboot to Recovery</string>
    <string name="action_refresh">Refresh</string>
    <string name="variant">Variant</string>
    <string name="arch">Architecture</string>
    <string name="variant_sum"></string>
    <string name="arch_sum"></string>
    <string name="settings">Settings</string>
    <string name="adv_set">Advanced</string>
    <string name="base_url">Base URL</string>
    <string name="base_sum"></string>
    <string name="android">Android</string>
    <string name="android_sum"></string>
    <string name="selector">Selector</string>
    <string name="selector_sum">JSoup select statement</string>
    <string name="selectorDL">Selector for download</string>
    <string name="selectorDL_sum">JSoup select for retrieving the file</string>
    <string name="directory">Directory</string>
    <string name="directory_sum">Download directory</string>
    <string name="external_browser">External Browser</string>
    <string name="external_sum">Use external browser for downloading</string>
    <string name="loading">Loading…</string>
    <string name="wifionly">Wi-Fi Only</string>
    <string name="wifi_sum">Download only over Wi-Fi</string>
    <string name="extWritePerm">External write permission required to download files</string>
    <string name="extReadPerm">External read permission required to identify existing downloads</string>
    <string name="dailydownload">Daily download</string>
    <string name="dailydownload_sum"></string>
    <string name="hour">Hour</string>
    <string name="hour_sum"></string>
    <string name="minute">Minute</string>
    <string name="minute_sum"></string>
    <string name="pref_auto">Ensure daily download is scheduled after boot</string>
    <string name="auto">Auto Start</string>
    <string name="choose">Choose</string>
    <string name="auto_detect">Auto</string>
    <string name="imgdesc">MD5 indicator</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
</resources>
