<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <ListPreference
            android:defaultValue="@string/auto_detect"
            android:entries="@array/arch"
            android:entryValues="@array/arch"
            android:key="prefArch"
            android:summary="@string/arch_sum"
            android:title="@string/arch" />
        <ListPreference
            android:defaultValue="@string/android_val"
            android:entries="@array/android"
            android:entryValues="@array/android"
            android:key="prefAndroid"
            android:summary="@string/android_sum"
            android:title="@string/android" />
        <ListPreference
            android:defaultValue="@string/variant_val"
            android:entries="@array/variant"
            android:entryValues="@array/variant"
            android:key="prefVariant"
            android:summary="@string/variant_sum"
            android:title="@string/variant" />
        <Preference
            android:defaultValue=""
            android:dependency="prefExternal"
            android:key="prefDirectory"
            android:summary="@string/directory_sum"
            android:title="@string/directory">
        </Preference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefDailyDownload"
            android:summary="@string/dailydownload_sum"
            android:title="@string/dailydownload" />
        <EditTextPreference
            android:defaultValue="@string/hour_val"
            android:dependency="prefDailyDownload"
            android:key="prefHour"
            android:summary="@string/hour_sum"
            android:title="@string/hour" />
        <EditTextPreference
            android:defaultValue="@string/minute_val"
            android:dependency="prefDailyDownload"
            android:key="prefMinute"
            android:summary="@string/minute_sum"
            android:title="@string/minute" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="prefDailyDownload"
            android:key="prefAuto"
            android:summary="@string/pref_auto"
            android:title="@string/auto" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/adv_set">
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="prefExternal"
            android:summary="@string/external_sum"
            android:title="@string/external_browser" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="prefExternal"
            android:key="prefWIFI"
            android:summary="@string/wifi_sum"
            android:title="@string/wifionly" />
<!--
        <EditTextPreference
            android:defaultValue="@string/base_val"
            android:key="prefBase"
            android:summary="@string/base_sum"
            android:title="@string/base_url" />
        <EditTextPreference
            android:defaultValue="@string/selector_val"
            android:key="prefSelector"
            android:summary="@string/selector_sum"
            android:title="@string/selector" />
-->

    </PreferenceCategory>
</PreferenceScreen>